--- a/css/custom.css
+++ b/css/custom.css
@@ -21,10 +21,10 @@ input[type=text] {
 form .fa{
     font-size: 30px;
     padding-top: 10px;
-    color: #A95FEF;
+    color: #C5A2F9;
 }
 .email-title {
-    color: #CDABFF;
+    color: #FFF;
 }
 }#home {
     padding-top: 0;
@@ -91,6 +91,9 @@ form .fa{
 .description-content h3, .description-content .h3, .description-content .fa {
     color: #6b4a9c
 }
+.description-content p {
+  min-height: 90px;
+}
 footer {
     margin: 5em 0;
 }
@@ -110,11 +113,12 @@ footer p {
     margin: 3em;
 }
 .splash {
-    padding: 9em 0 2em;
-    background-color: #3f4041;
+    padding: 10em 0 2em;
     background-image: url(../img/bg.jpg);
+    background-color: #5b3c89;
     background-size: cover;
     background-attachment: fixed;
+    background-position:center center;
     color: #fff;
     text-align: center;
 }
@@ -143,13 +147,27 @@ footer p {
   padding: 0;
 }
 .section-ideas {
-  background-color: #534f5a;
+  background-color: #383838;
+  background-image: url(../img/bg_idea.jpg);
+  background-size: cover;
   color: #F5F5F5;
 }
 .section-contribution {
+  background-image: url(../img/bg_contribution.jpg);
+  background-size: cover;
+  color: #202020;
 }
 .section-donation {
+  background-image: url(../img/bg_donation.jpg);
   background-color: #6b4a9c;
+  background-size: cover;
+  color: #F5F5F5;
+}
+.section-love {
+  background-color: #6b4a9c;
+  background-image: url(../img/bg_love.jpg);
+  background-size: cover;
+  background-position:center center;
   color: #F5F5F5;
 }
 .section-preview {
