--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -156,9 +156,15 @@ footer p {
   color: #F5F5F5;
   padding: 0;
 }
+.section-information h1, .section-information h2, .section-information h3, .section-information h4, .section-information h5 {
+  color: #F5F5F5;
+}
 .section-ideas {
   background-color: #FCFCFC;
   background-size: cover;
+  color: #BF3838;
+}
+.section-ideas h1, .section-ideas h2, .section-ideas h3, .section-ideas h4, .section-ideas h5 {
   color: #BF3838;
 }
 .section-project {
@@ -169,15 +175,24 @@ footer p {
   background-size: cover;
   color: #6B4A9C;
 }
+.section-contribution h1, .section-contribution h2, .section-contribution h3, .section-contribution h4, .section-contribution h5 {
+  color: #6B4A9C;
+}
 .section-donation {
   background-color: #5f3998;
   background-size: cover;
+  color: #F5F5F5;
+}
+.section-donation h1, .section-donation h2, .section-donation h3, .section-donation h4, .section-donation h5 {
   color: #F5F5F5;
 }
 .section-love {
   background-color: #fcfcfc;
   background-size: cover;
   background-position:center center;
+  color: #6B4A9C;
+}
+.section-love h1, .section-love h2, .section-love h3, .section-love h4, .section-love h5 {
   color: #6B4A9C;
 }
 .section-preview {
