--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4048,7 +4048,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
   color: #8e62bc;
-  background-color: #F6F6F6;
+  background-color: #ECECEC4D;
   border: 1px solid #C2C2C2;
   border-bottom-color: transparent;
   cursor: default;
@@ -4710,7 +4710,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 8px 15px;
   margin-bottom: 21px;
   list-style: none;
-  background-color: #AE86C9;
+  background-color: #9E7CCF;
   border-radius: 4px;
 }
 .breadcrumb > li {
@@ -4722,7 +4722,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   color: #ffffff;
 }
 .breadcrumb > .active {
-  color: #7A4DAA;
+  color: #FFF;
   font-weight: bold;
 }
 .pagination {
@@ -4937,7 +4937,7 @@ a.label:focus {
   vertical-align: middle;
   white-space: nowrap;
   text-align: center;
-  background-color: #7A4DAA;
+  background-color: #CBC9CC;
   border-radius: 10px;
 }
 .badge:empty {
@@ -4978,7 +4978,7 @@ a.badge:focus {
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: inherit;
-  background-color: #303030;
+  background-color: #FFF;
 }
 .jumbotron h1,
 .jumbotron .h1 {
@@ -5021,8 +5021,8 @@ a.badge:focus {
   padding: 2px;
   margin-bottom: 21px;
   line-height: 1.42857143;
-  background-color: #222222;
-  border: 1px solid #464545;
+  background-color: #F3F3F3;
+  border: 1px solid #D4D4D4;
   border-radius: 4px;
   -webkit-transition: border 0.2s ease-in-out;
   -o-transition: border 0.2s ease-in-out;
@@ -5040,7 +5040,7 @@ a.thumbnail.active {
 }
 .thumbnail .caption {
   padding: 9px;
-  color: #ffffff;
+  color: #6C6A6A;
 }
 .alert {
   padding: 15px;
@@ -5145,7 +5145,7 @@ a.thumbnail.active {
   overflow: hidden;
   height: 21px;
   margin-bottom: 21px;
-  background-color: #ebebeb;
+  background-color: #c9c0d5;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -5268,8 +5268,8 @@ a.thumbnail.active {
   display: block;
   padding: 10px 15px;
   margin-bottom: -1px;
-  background-color: #303030;
-  border: 1px solid #464545;
+  background-color: #F9F9F9;
+  border: 1px solid #F8F8F8;
 }
 .list-group-item:first-child {
   border-top-right-radius: 4px;
@@ -5839,7 +5839,7 @@ button.list-group-item-danger.active:focus {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #F8F8F8;
+  background-color: #FFF;
   border: 1px solid #e6e6e6;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
