--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2890,7 +2890,7 @@ select[multiple].input-lg {
   color: #ffffff;
 }
 .has-error .form-control {
-  border-color: #ffffff;
+  border-color: #ed4c3c;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
@@ -2989,7 +2989,6 @@ select[multiple].input-lg {
   .form-horizontal .control-label {
     text-align: right;
     margin-bottom: 0;
-    padding-top: 11px;
   }
 }
 .form-horizontal .has-feedback .form-control-feedback {
@@ -3426,7 +3425,7 @@ fieldset[disabled] .btn-link {
 .btn-link:focus,
 .btn-link:active {
   border-color: transparent;
-  font-size: 24px;
+  font-size: 18px;
 }
 .btn-link:hover,
 .btn-link:focus {
